--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.App {
-  border: 2px solid black;
-  text-align: center;
-  background: #f5f5f5;
-  color: #333;
-  margin: 20px;
-  padding: 20px;
-}
 
 @import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
@@ -15,7 +7,7 @@
 }
 
 body {
-	background-image: url('https://images.unsplash.com/photo-1519120944692-1a8d8cfc107f?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9');
+	background-image: url('https://source.unsplash.com/daily');
 	background-size: cover;
 	background-position: center center;
 	display: flex;
@@ -71,14 +63,16 @@ p {
 }
 
 .wpm {
+  background-color: #fff;
+  border: 2px solid rgb(219, 150, 150);
 	position: fixed;
-  top: 100px;
+  top: 130px;
 	width: 650px;
 	text-align: center;
 }
 
 .green {
-	color: green;
+	background-color: rgb(167, 218, 167);
 }
 
 .red {
@@ -171,15 +165,6 @@ p {
 	transform: translateX(-50%);
 	text-align: center;
 	width: 235px;
-}
-
-.social-panel p i {
-	margin: 0 5px;
-}
-
-.social-panel p a {
-	color: #FF7500;
-	text-decoration: none;
 }
 
 
